tools/themes/mobile.css
/* Mobile */

body.lichessTools.lichessTools-theme_mobile.mobile {
  ---site-header-height: 30px;
  ---site-header-margin: 4px;
  margin-top: 0;
}

@media (max-width: 799.3px) and (orientation: portrait) {

  body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour) {
    grid-template-areas:
      "board"
      "controls"
      "tools"
      "under"
      "side"
      "round-training"
      "chat"
      "uchat";
    grid-template-rows: auto;
  }

  body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour) .analyse__moves {
    max-height: 25em;
  }

  body.lichessTools.lichessTools-theme_mobile.mobile rm6 .col1-moves > button[data-ply] {
    font-size: 2em;
    padding: 0 0.75em;
  }

  body.lichessTools.lichessTools-theme_mobile.mobile rm6 rb1 {
    justify-content: space-around;
    font-size: 1.25em;
  }

  body.lichessTools.lichessTools-theme_mobile.mobile rm6 rb1 .fbt {
    flex-basis: auto;
  }

  body.lichessTools.lichessTools-theme_mobile.mobile rm6 rb1 .noop {
    display:none;
  }

  body.lichessTools.lichessTools-theme_mobile.mobile:has(.ricons .fbt.analysis) rm6 rb1 a.fbt.analysis {
    display:none;
  }

  body.lichessTools.lichessTools-theme_mobile.mobile.playing main.round {
     grid-template-areas: "app" "side" "under" "uchat"
  }
  body.lichessTools.lichessTools-theme_mobile.mobile.playing main.round div.crosstable {
     opacity:0.7;
     pointer-events: none;
  }
}

body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour):has(.action-menu) .analyse__underboard,
body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour):has(.action-menu) .analyse__side {
  display: none;
}

body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour) .analyse__tools:has(.action-menu) {
  min-height: 50vh;
}

body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour) .explorer-box {
  min-height: 20em;
}

body.lichessTools.lichessTools-theme_mobile.mobile.lichessTools-hasBoardSize main.analyse:not(.has-relay-tour) .analyse__moves {
  flex-basis: max-content;
  max-height: var(--board-size);
}

body.lichessTools.lichessTools-theme_mobile.mobile main.analyse.has-players:not(.has-relay-tour) .main-board {
  margin-top: 1.2rem;
  margin-bottom: 1.8rem;
}

body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour) .gamebook {
  margin-top: 4px;
}

body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour) .gamebook .floor {
  margin-top: 0;
  max-height: 6em;
  align-items: center;
}

body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour) .gamebook .floor img.mascot {
  height: 5em;
}

body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour) .feedback {
  height: auto;
  min-height: 5rem;
}

body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour) .analyse-controls {
  margin-top: 0;
}

body.lichessTools.lichessTools-theme_mobile.mobile label.hbg[for="tn-tg"] span {
  display: none;
}

body.lichessTools.lichessTools-theme_mobile.mobile label.hbg[for="tn-tg"]:after {
  content: var(--icon-TrigramForHeaven);
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: large;
}

body.lichessTools.lichessTools-theme_mobile.mobile main.analyse div.analyse__tools .explorer-box .moves tbody tr.sum {
  position: sticky;
  bottom: 0;
}

body.lichessTools.lichessTools-theme_mobile.mobile main.round div.rcontrols:has(.question) div.ricons {
  display: none;
}

body.lichessTools.lichessTools-theme_mobile.mobile .training-box .choices {
  margin-bottom: 0;
}

body.lichessTools.lichessTools-theme_mobile.mobile .training-box .choices a:nth-child(1) {
  margin-right: 1em;
}

body.lichessTools.lichessTools-theme_mobile.mobile .training-box .choices a {
  font-size: smaller;
  color: var(--c-over);
  background: var(--c-primary);
  text-transform: uppercase;
  padding: .8em 1em;
  border: none;
  cursor: pointer;
  text-align: center;
  user-select: none;
  white-space: nowrap;
  display: inline-block;
  transition: all 150ms;
  border-radius: 5px;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .225);
}

body.lichessTools.lichessTools-theme_mobile.mobile .rclock .moretime {
  display: flex;
}


body.lichessTools.lichessTools-theme_mobile.mobile div.analyse__board {
  margin-top: 1em;
  margin-bottom: 1em;
}

body.lichessTools.lichessTools-theme_mobile.mobile div.eval-gauge {
  margin-top: 1em;
}

body.lichessTools.lichessTools-theme_mobile.mobile div.analyse__player_strip {
  display: flex;
}

body.lichessTools.lichessTools-theme_mobile.mobile aside.analyse__side div.game__meta__players {
  display: block;
}

body.lichessTools.lichessTools-theme_mobile.mobile .analyse__controls .jumps i.scrub-help {
  padding: 1em;
}

body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools div.analyse__fork {
  order: 0;
}

body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools div.ceval {
  order: 1;
}

body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools div.pv_box {
  order: 2;
}

body.lichessTools.mobile div.gamebook-edit {
  order: 3;
}

body.lichessTools.mobile div.lichessTools-moveListOptions-header {
  order: 4;
}

body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools section.explorer-box {
  order: 5;
}

body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools .lichessTools-resizeExplorer {
  order: 6;
}

body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools .lichessTools-searchMovesCommand {
  order: 7;
}

body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools .analyse__moves {
  order: 7;
}

body.lichessTools.lichessTools-theme_mobile.mobile main.forum:has(.slist.topics) {
  overflow: auto;
}

body.lichessTools.lichessTools-theme_mobile.mobile .forum .slist.topics {
  table-layout: auto;
  min-width: 45em;
}

body.lichessTools.lichessTools-theme_mobile.mobile .forum .slist td.subject {
  min-width: 20em;
}

/*body.lichessTools.lichessTools-theme_mobile.mobile .forum .slist th.right,*/
body.lichessTools.lichessTools-theme_mobile.mobile .forum .slist td.right {
  display: table-cell;
}

body.lichessTools.lichessTools-theme_mobile.mobile .forum .slist td:last-child {
  display: table-cell;
}

/** Prettier **/

body.lichessTools.lichessTools-prettier.lichessTools-theme_mobile.mobile main.analyse.has-players:not(.has-relay-tour) .main-board {
  margin-top: 2rem;
  margin-bottom: 2.5rem;
}

